# rofl.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  THOUGHTS.md
.github/workflows/: ci.yml
doc/: lsp_completion_item.ts
lua/: rofl.lua
lua/tests/: buffer_completion_spec.lua  connection_spec.lua  file_completion_spec.lua
plugin/: rofl.vim
scratch/: complete_add.vim  on_lines.lua  scratch_file.lua
scripts/: minimal_init.vim
src/: collections.rs  entry.rs  main.rs  matcher.rs  nvim.rs  score.rs  source.rs  sources.rs
src/nvim/: iskeyword.rs  mod.rs
src/source/: buffer.rs  counter.rs  static.rs
