[package]
name = "rofl_nvim"
version = "0.1.0"
authors = ["TJ DeVries <devries.timothyj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs = { version = "0.2", features = ["use_async-std"] }
async-trait = "0.1.22"
async-std = "1.9.0"
log = "0.4.14"
simplelog = "0.9.0"
