[package]
name = "rofl_nvim"
version = "0.1.0"
authors = ["TJ DeVries <devries.timothyj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs = { version = "0.2", features = ["use_tokio"] }
tokio = { version = "0.2.25", features = ["full"] }
async-trait = "0.1.22"
log = "0.4.14"
simplelog = "0.9.0"
fuzzy-matcher = "0.3.7"
dyn-clone = "1.0.4"
futures-util = "0.3.12"
futures = "0.3.12"
anyhow = "1.0.38"
directories-next = "2.0.0"
